style.css
/* Colours for entire app*/
:root {
  --darkgrey: #1a1a1b;
  --slategrey: #3a3a3c;
  --grey: #86888a;
  --lightgrey: #787c7e;
  --green: #538d4e;
  --yellow: #b59f3b;
  --white: #fff;
}

/* Styling for whole app*/
body {
  font-family: sans-serif;
  color: var(--white);
  background: var(--darkgrey);
  padding: 1em;
}

h1 {
  font-size: 1em;
  letter-spacing: 2px;
}

p {
  font-size: 0.9em;
  letter-spacing: 0.5px;
}

button {
  background: none;
  border: none;
  color: var(--white);
  font-size: 20px;
  opacity: 0.5;
}

button:hover {
  cursor: pointer;
}

/* Styling for pop-up messages (how to & stats)*/

.pop-up {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  background: var(--darkgrey);
  width: 24em;
  border: 3px var(--slategrey) solid;
  padding: 0 1.5em;
  border-radius: 20px;
}

.header {
  display: flex;
  margin-left: 8.5em;
  justify-content: space-between;
}

/* Styling for the instructions pop-up message*/

.border {
  border-top: 2px solid var(--slategrey);
  padding-top: 0.5em;
}

.instructions .word-container {
  display: flex;
}

.instructions .letter {
  border: 3px var(--slategrey) solid;
  font-size: 2em;
  font-weight: 600;
  width: 1.2em;
  text-align: center;
  margin: 3px;
}

.instructions .green {
  background: var(--green);
}
.instructions .yellow {
  background: var(--yellow);
}

.instructions .grey {
  background: var(--lightgrey);
}

/* Styling for the statitstics pop-up message */
.statistics {
  text-align: center;
}
.statistics .stats-container {
  display: flex;
  text-align: center;
  padding: 2em 0;
  justify-content: center;
}
.column {
  width: 4em;
}
.column > * {
  margin: 0;
}
.column .sml {
  font-size: 12px;
}
.data {
  font-size: 2.5em;
  padding-bottom: 0.2em;
}

.countdown {
  font-size: 2em;
  letter-spacing: 3px;
}

.footer-container {
  display: flex;
  flex-wrap: wrap;
  padding-bottom: 2em;
  align-items: center;
  justify-content: center;
  gap: 2em;
}

.countdown-container {
  padding-inline-end: 1em;
  border-inline-end: 2px solid var(--slategrey);
}
.share {
  background: var(--green);
  opacity: 100;
  padding: 0.8em 1.2em;
  border-radius: 10px;
  font-weight: 600;
  letter-spacing: 2px;
}

/* Styling for clipboard confirmation */
.confirm-msg {
  background: var(--white);
  color: var(--darkgrey);
  width: 12em;
  text-align: center;
  font-weight: 800;
}

/*Clases to target in JS for element visibility*/

.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s linear 400ms, opacity 400ms;
}

.visible {
  visibility: visible;
  opacity: 1;
  transition: visibility 0s linear 0s, opacity 400ms;
}

